# kernel-bench

./: .gitignore  README.md  finding-the-minimum.md  pyproject.toml  requirements.txt
bench/: _common.py  backward.py  check.py  forward.py  kernels.py
capture/: capture.py
docs/: BENCHMARKS.md  FIXES.md  OPTIMIZATION_REPORT.md
experiments/: LOG.md  profile_driver.py
experiments/alerax_speed/: OPTIMIZATION_PLAN.md  README.md  alerax_chunked_timing.txt  alerax_hogenom_combined_likelihoods.txt  analyze_profile.py  archaea_ge4sp.families.txt  combine_alerax_chunks.py  hogenom1055_warmrebatch_rerun.json  hogenom1055_warmrebatch_rerun_theta.pt  hogenom_1055.genetrees.txt  hogenom_1055_ge4sp.families.txt  hogenom_512_ge4sp.families.txt  hogenom_full_ge4sp.families.txt  hogenom_subsets_timing.summary.txt  make_families.py  make_hogenom_full_families.py  (+14 more)
kbench/: _capture_io.py  runtime.py
newton/: __init__.py  _cluster_a100.md  _golden_baseline.md  _hvp_perf_review.md  _hvp_profiling_report.md  _map_cv_plan.md  _optimize_findings.md  _ridge_anneal_plan.md  _saddle_escape_plan.md  _specieswise_basin_findings.md  _wave_so_notes.md  baselines.py  basin_compare.py  basin_connectivity.py  basin_interp.py  basin_search.py  cg.py  convergence_audit.py  driver.py  forward_tangent.py  gauge_audit.py  ggn.py  golden_descent.py  hvp_exact.py  newton_cg.py  optimize.py  pipeline.py  specieswise_fit.py  test_witness.py  theta_diagnostics.py  verify.py  vg.py
paper/: EXPERIMENT_PLAN.md  gpurec_paper.tex  make_fig_speed.py  suggestions.md
scripts/: setup_cluster_env.sh
(+38 files in other folders)
